--- a/scoreboard.html
+++ b/scoreboard.html
@@ -24,6 +24,13 @@
 
     <main class="max-w-6xl mx-auto">
         <section class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <h2 class="text-2xl font-semibold text-blue-700 border-b-2 border-blue-200 pb-3 mb-5">プレイヤー名入力</h2>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
+                <input id="player1-name" type="text" class="border rounded p-2 w-full" placeholder="プレイヤー1">
+                <input id="player2-name" type="text" class="border rounded p-2 w-full" placeholder="プレイヤー2">
+                <input id="player3-name" type="text" class="border rounded p-2 w-full" placeholder="プレイヤー3">
+                <input id="player4-name" type="text" class="border rounded p-2 w-full" placeholder="プレイヤー4">
+            </div>
             <h2 class="text-2xl font-semibold text-blue-700 border-b-2 border-blue-200 pb-3 mb-5">現在のプレイヤー</h2>
             <div id="current-players-display" class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
                 <!-- プレイヤー名はscript.jsで動的に表示 -->
